# micrograph-batch

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: demo_config.csv  make_demo_images.py
src/micrograph_batch/: __init__.py  __main__.py  batch.py  cli.py  config.py  constants.py  imaging.py  visual_crop.py
tests/: test_config.py  test_end_to_end.py  test_imaging.py
