[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "micrograph-batch"
version = "1.0.0"
description = "CSV-driven batch processing for microscopy images: TIFF-to-JPEG conversion, cropping, brightness/contrast, and calibrated scale bars."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mengwei Li" }]
keywords = ["microscopy", "image-processing", "scale-bar", "batch", "tiff"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = ["Pillow>=9.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
micrograph-batch = "micrograph_batch.cli:main"

[project.urls]
Homepage = "https://github.com/ArGoN-SpUTTerING/micrograph-batch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
